# KohakuTerrarium

./: .gitignore  CLAUDE.md  README.md  README.zh.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
agents/: README.md
agents/conversational/: config.yaml  memory_writer.md  output.md  system.md
agents/conversational/custom/: input.py  output.py
agents/discord_bot/: .gitignore  config.yaml
agents/discord_bot/custom/: discord_client.py  discord_input.py  discord_io.py  discord_output.py  discord_trigger.py  emoji_db.py  image_utils.py
agents/discord_bot/prompts/: character.md  context_format.md  rules.md  system.md
agents/monitor_agent/: config.yaml
agents/novel_terrarium/: terrarium.yaml
agents/rp_agent/: config.yaml
agents/rp_agent/prompts/: system.md
agents/swe_agent/: config.yaml
agents/swe_agent/prompts/: system.md
agents/swe_agent_tui/: config.yaml
apps/api/: app.py  deps.py  main.py
apps/api/routes/: agents.py  channels.py  configs.py  creatures.py  terrariums.py
apps/api/ws/: agents.py  channels.py  chat.py
apps/web/: vite.config.js
creatures/general/: config.yaml
creatures/general/prompts/: system.md
creatures/researcher/: config.yaml
creatures/researcher/prompts/: system.md
creatures/reviewer/prompts/: system.md
creatures/root/: config.yaml
creatures/root/prompts/: system.md
creatures/swe/: config.yaml
creatures/swe/prompts/: system.md
docs/: README.md  architecture.md  docs.config.js
docs/api/: builtins.md  core.md  modules.md
docs/api-reference/: README.md  cli.md  http.md  python.md
docs/architecture/: README.md  framework.md
docs/concept/: creature.md  environment.md  terrarium.md
docs/concepts/: README.md  agents.md
docs/develop/: README.md  creatures.md
docs/en/guides/: getting-started.md
docs/guide/: README.md  configuration.md  creatures.md  custom-modules.md  getting-started.md  sessions.md
docs/guides/: configuration.md  example-agents.md  getting-started.md
docs/terrarium/: api.md  architecture.md  channels.md  configuration.md  index.md  serving.md  setup.md
docs/zh-CN/guides/: README.md  configuration.md  getting-started.md  serving.md  terrariums.md
docs/zh-TW/guides/: getting-started.md
example_output/novel_terrarium/: chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  novel.md  seed.md
examples/: README.md
examples/agent-apps/compact_test/: config.yaml
examples/agent-apps/conversational/: config.yaml  output.md  system.md
examples/agent-apps/discord_bot/: config.yaml
examples/agent-apps/monitor_agent/: config.yaml
examples/agent-apps/planner_agent/: config.yaml
examples/agent-apps/rp_agent/: config.yaml
examples/agent-apps/swe_agent/: config.yaml
examples/agent-apps/swe_agent_tui/: config.yaml
examples/code/: basic_agent.py  ensemble_voting.py  pipeline_transforms.py  programmatic_chat.py  review_loop.py  run_terrarium.py  smart_router.py
examples/terrariums/novel_terrarium/: terrarium.yaml
examples/terrariums/swe_team_managed_tui/: terrarium.yaml
ideas/: api-design.md  complexity-tracking.md  creature-terrarium.md  environment-system.md  initial_discussion.md  root-agent-application.md  terrarium-design.md  terrarium-ui-design.md  web_gui_design.md
plans/: frontend-improvements.md  tui-redesign.md
scripts/: inspect_session.py  test_native_tools.py
src/kohakuterrarium/: __main__.py  packages.py
src/kohakuterrarium-frontend/src/: App.vue  main.js  style.css
src/kohakuterrarium/api/: __init__.py  agent_session.py  manager.py
src/kohakuterrarium/bootstrap/: io.py  llm.py  plugins.py
src/kohakuterrarium/builtins/: README.md  __init__.py
src/kohakuterrarium/cli/: __init__.py  auth.py  resume.py  run.py
src/kohakuterrarium/commands/: read.py
src/kohakuterrarium/core/: agent.py  (+19 more)
terrariums/swe_team/: terrarium.yaml
tests/: __init__.py
tests/integration/: __init__.py  test_channel_prompts.py  test_channels.py  test_compact_integration.py  test_error_handling.py  test_hotplug.py  test_native_tool_flow.py  test_ollama.py  test_output_isolation.py  test_output_log.py  test_output_wiring_runtime.py  test_pipeline.py  test_service_api.py  test_terrarium.py  test_terrarium_api.py  test_tool_format_integration.py
tests/unit/: __init__.py  test_bootstrap.py  test_codex_oauth.py  test_codex_rate_limits.py  test_creature_inheritance.py  test_environment.py  test_file_sizes.py  test_llm_profiles.py  test_memory.py  test_multi_edit.py  test_multi_edit_tool.py  test_native_tools.py  test_output_wiring_core.py  test_output_wiring_terrarium.py  test_packages.py  test_phase1.py  test_phase2.py  test_phase3_4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_plugin_system.py  test_run_cli.py  test_session_resume.py  test_session_store.py  test_stream_events.py  test_terrarium_modules.py  test_terrarium_prompts.py  test_tool_format.py  test_trigger_manager.py  test_triggers_and_manual.py  test_unified_config.py  test_web_tools.py
(+229 files in other folders)
