[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KohakuTerrarium"
version = "1.0.0b10"
description = "A universal agent framework for building self-driven AI agents and multi-agent teams"
authors = [
    { name = "Shih-Ying Yeh (KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "KohakuTerrarium-1.0" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ai", "agent", "llm", "multi-agent", "terrarium", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.27.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=25.1.0",
    "python-dotenv>=1.0.0",
    "kohakuvault>=0.7.0",
    "textual>=8.0.0",
    "html2text>=2025.0.0",
    "gitpython>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Kohaku-Lab/KohakuTerrarium"
Repository = "https://github.com/Kohaku-Lab/KohakuTerrarium"
Documentation = "https://github.com/Kohaku-Lab/KohakuTerrarium/tree/main/docs"
Issues = "https://github.com/Kohaku-Lab/KohakuTerrarium/issues"

[project.scripts]
kt = "kohakuterrarium.__main__:main"

[project.optional-dependencies]
# ── minimal: everything needed for full functionality ────────────────
# Web API server
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
# Web tools: fetch pages + search
web = [
    "trafilatura>=2.0.0",
    "ddgs>=9.0.0",
]
# PDF reading in the read tool
pdf = [
    "pymupdf>=1.24.0",
]
# MCP (Model Context Protocol) client support
mcp = [
    "mcp>=1.0.0",
]
# Lightweight embeddings for session memory (no pytorch)
embeddings = [
    "model2vec>=0.8.0",
]
# Desktop app (native webview window)
desktop = [
    "pywebview==6.1",
]
# Minimal = all core functionality (no pytorch, no heavy extras)
minimal = [
    "KohakuTerrarium[api,web,pdf,mcp,embeddings,desktop]",
]

# ── demo: example agent-apps that need extra deps ────────────────────
discord = [
    "discord.py>=2.0.0",
    "Pillow>=12.2.0",
]
asr = [
    "openai-whisper>=20250625",
    "sounddevice>=0.4.0",
    "numpy>=2.4.0",
]
demo = [
    "KohakuTerrarium[discord,asr]",
]

# ── browser: full browser rendering for web_fetch (heavy: lxml) ──────
browser = [
    "crawl4ai>=0.8.0",
]

# ── full: everything including pytorch-based embeddings ──────────────
embeddings-heavy = [
    "sentence-transformers>=5.0.0",
]
full = [
    "KohakuTerrarium[minimal,demo,browser,embeddings-heavy]",
]

# ── dev: testing and linting ─────────────────────────────────────────
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.0",
    "ruff>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kohakuterrarium.builtin_skills" = ["**/*.md"]
"kohakuterrarium" = ["web_dist/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F401", "F841"]

[tool.briefcase]
project_name = "KohakuTerrarium"
bundle = "com.kohaku.terrarium"
version = "1.0.0b10"
url = "https://github.com/Kohaku-Lab/KohakuTerrarium"
license.file = "LICENSE"
author = "Shih-Ying Yeh (KohakuBlueLeaf)"
author_email = "apolloyeh0123@gmail.com"

[tool.briefcase.app.kohakuterrarium]
formal_name = "KohakuTerrarium"
description = "Universal Agent Framework - Desktop App"
icon = "src/kohakuterrarium/app_icon"
sources = ["src/kohakuterrarium"]
startup_module = "kohakuterrarium.__briefcase__"
requires = [
    # Core deps (same as [project] dependencies)
    "httpx>=0.27.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=25.1.0",
    "python-dotenv>=1.0.0",
    "kohakuvault>=0.7.0",
    "textual>=8.0.0",
    "html2text>=2025.0.0",
    "gitpython>=3.1.0",
    # [minimal] extras
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pywebview==6.1",
    "trafilatura>=2.0.0",
    "ddgs>=9.0.0",
    "pymupdf>=1.24.0",
    "model2vec>=0.8.0",
]
# NOTE: demo (discord, asr), browser (crawl4ai), embeddings-heavy
# (sentence-transformers/pytorch) deliberately excluded for binary size
# proxy_tools (pywebview dep) only has sdist on PyPI — pre-build wheel in CI
requirement_installer_args = ["--find-links", "wheels"]

[tool.briefcase.app.kohakuterrarium.macOS]
universal_build = false
requires = [
    "std-nslog~=1.0.0",
]

[tool.briefcase.app.kohakuterrarium.windows]
requires = []
